samples/_failures_safe/1761164705_1b29f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9f61311.c: In function ‘main’:
./samples/SAFE/__tmp_e9f61311.c:159:52: error: expected ‘)’ at end of input
  159 |     if (start < 0 || start >= node_count || end < 0
      |        ~                                           ^
      |                                                    )
./samples/SAFE/__tmp_e9f61311.c:159:5: error: expected declaration or statement at end of input
  159 |     if (start < 0 || start >= node_count || end < 0
      |     ^~
